src/decaff.output
Terminals unused in grammar

   T_INTG
   T_FLOT
   T_BOOL
   O_NOT
   O_LEQ
   O_GEQ
   O_LES
   O_GRE
   O_EQL
   O_NEQ


State 5 conflicts: 2 shift/reduce
State 8 conflicts: 1 shift/reduce
State 9 conflicts: 1 shift/reduce
State 10 conflicts: 1 shift/reduce
State 14 conflicts: 1 shift/reduce
State 15 conflicts: 1 shift/reduce
State 16 conflicts: 2 shift/reduce
State 17 conflicts: 2 shift/reduce
State 21 conflicts: 2 shift/reduce
State 22 conflicts: 2 shift/reduce
State 23 conflicts: 2 shift/reduce
State 33 conflicts: 1 shift/reduce
State 57 conflicts: 2 shift/reduce
State 60 conflicts: 13 shift/reduce
State 62 conflicts: 13 shift/reduce
State 90 conflicts: 13 shift/reduce
State 103 conflicts: 2 shift/reduce
State 107 conflicts: 2 shift/reduce
State 108 conflicts: 2 shift/reduce
State 110 conflicts: 2 shift/reduce
State 115 conflicts: 1 shift/reduce, 3 reduce/reduce
State 116 conflicts: 1 shift/reduce, 3 reduce/reduce
State 129 conflicts: 1 shift/reduce
State 135 conflicts: 2 shift/reduce
State 139 conflicts: 2 shift/reduce
State 140 conflicts: 2 shift/reduce
State 143 conflicts: 10 reduce/reduce
State 147 conflicts: 2 shift/reduce
State 149 conflicts: 2 shift/reduce


Grammar

    0 $accept: PROGRAM $end

    1 PROGRAM: KEY_CLASS KEY_PROGRAM LEFT_CBRACE T_ELINES GLOBAL_DECL RIGHT_CBRACE T_ELINES

    2 GLOBAL_DECL: %empty
    3            | FIELD_DECLS T_ELINES
    4            | METHOD_DECLS T_ELINES
    5            | GLOBAL_DECL FIELD_DECLS T_ELINES
    6            | GLOBAL_DECL METHOD_DECLS T_ELINES

    7 T_NEWLINES: T_NEWLINE
    8           | T_NEWLINES T_NEWLINE

    9 T_ELINES: %empty
   10         | T_NEWLINES
   11         | O_SEMICOLONS
   12         | T_ELINES T_NEWLINES
   13         | T_ELINES O_SEMICOLONS

   14 O_SEMICOLONS: O_SEMICOLON
   15             | O_SEMICOLONS O_SEMICOLON

   16 FIELD_DECLS: KEY_TYPE IDENTIFIER_LIST O_SEMICOLONS

   17 IDENTIFIER_LIST: IDENTIFIER
   18                | IDENTIFIER ASSIGNMENT_OP EXPRESSION
   19                | IDENTIFIER LEFT_SBRACE INT_LITERAL RIGHT_SBRACE ASSIGNMENT_OP EXPRESSION
   20                | IDENTIFIER LEFT_SBRACE INT_LITERAL RIGHT_SBRACE
   21                | IDENTIFIER_LIST O_COMMA IDENTIFIER
   22                | IDENTIFIER_LIST O_COMMA IDENTIFIER LEFT_SBRACE INT_LITERAL RIGHT_SBRACE

   23 METHOD_DECLS: KEY_TYPE IDENTIFIER O_LEF ARG_LIST O_RIT BLOCK

   24 BLOCK: T_ELINES LEFT_CBRACE EXECUTABLES RIGHT_CBRACE T_ELINES

   25 EXECUTABLES: %empty
   26            | EXECUTABLES T_ELINES VAR_DECL
   27            | EXECUTABLES T_ELINES STATEMENT

   28 VAR_DECL: KEY_TYPE IDENTIFIER_LIST O_SEMICOLONS

   29 EXPRESSION: LOCATION
   30           | METHOD_CALL
   31           | LITERAL
   32           | EXPRESSION BINARY_OP EXPRESSION
   33           | BINARY_SUBTRACT EXPRESSION
   34           | UNARY_NOT EXPRESSION
   35           | O_LEF EXPRESSION O_RIT

   36 BINARY_OP: ARITHMETIC_OP
   37          | RELATIONAL_OP
   38          | EQ_OP
   39          | CONDITIONAL_OP

   40 ARITHMETIC_OP: BINARY_ADD
   41              | BINARY_SUBTRACT
   42              | BINARY_MULTIPLY
   43              | BINARY_DIVISION
   44              | BINARY_MOD

   45 RELATIONAL_OP: R_LESS_THAN
   46              | R_GREATER_THAN
   47              | R_LESS_THAN_EQUAL
   48              | R_GREATER_THAN_EQUAL

   49 EQ_OP: R_EQUALS
   50      | R_NOT_EQUALS

   51 CONDITIONAL_OP: R_AND
   52               | R_OR

   53 LITERAL: INT_LITERAL
   54        | BOOL_LITERAL
   55        | CHAR_LITERAL

   56 STATEMENT: LOCATION ASSIGNMENT_OP EXPRESSION O_SEMICOLON
   57          | METHOD_CALL O_SEMICOLON
   58          | KEY_IF O_LEF EXPRESSION O_RIT BLOCK
   59          | KEY_IF O_LEF EXPRESSION O_RIT BLOCK KEY_ELSE BLOCK
   60          | KEY_IF O_LEF EXPRESSION O_RIT BLOCK KEY_ELSE ELSE_BLOCK
   61          | KEY_FOR IDENTIFIER EQUAL_OP EXPRESSION O_COMMA EXPRESSION BLOCK
   62          | BLOCK
   63          | KEY_RETURN EXPRESSION O_SEMICOLON

   64 ELSE_BLOCK: BLOCK
   65           | KEY_IF O_LEF EXPRESSION O_RIT BLOCK
   66           | KEY_IF O_LEF EXPRESSION O_RIT BLOCK KEY_ELSE ELSE_BLOCK

   67 METHOD_CALL: METHOD_NAME O_LEF PARAM_LIST O_RIT
   68            | KEY_CALLOUT O_LEF STRING O_COMMA PARAM_LIST O_RIT

   69 PARAM_LIST: %empty
   70           | EXPRESSION
   71           | STRING
   72           | PARAM_LIST O_COMMA EXPRESSION
   73           | PARAM_LIST O_COMMA STRING

   74 METHOD_NAME: IDENTIFIER

   75 ASSIGNMENT_OP: EQUAL_OP
   76              | ADD_EQUAL_OP
   77              | SUB_EQUAL_OP

   78 LOCATION: IDENTIFIER
   79         | IDENTIFIER LEFT_SBRACE EXPRESSION RIGHT_SBRACE

   80 ARG_LIST: %empty
   81         | KEY_TYPE IDENTIFIER
   82         | ARG_LIST O_COMMA KEY_TYPE IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256)
T_INTG (258)
T_FLOT (259)
T_BOOL (260)
T_NEWLINE (261) 7 8
IDENTIFIER (262) 17 18 19 20 21 22 23 61 74 78 79 81 82
KEY_CLASS (263) 1
KEY_PROGRAM (264) 1
O_COMMA (265) 21 22 61 68 72 73 82
KEY_TYPE (266) 16 23 28 81 82
KEY_FOR (267) 61
O_SEMICOLON (268) 14 15 56 57 63
KEY_IF (269) 58 59 60 65 66
KEY_ELSE (270) 59 60 66
KEY_CALLOUT (271) 68
STRING (272) 68 71 73
EQUAL_OP (273) 61 75
ADD_EQUAL_OP (274) 76
SUB_EQUAL_OP (275) 77
LEFT_CBRACE (276) 1 24
RIGHT_CBRACE (277) 1 24
INT_LITERAL (278) 19 20 22 53
LEFT_SBRACE (279) 19 20 22 79
RIGHT_SBRACE (280) 19 20 22 79
BOOL_LITERAL (281) 54
CHAR_LITERAL (282) 55
BINARY_ADD (283) 40
BINARY_SUBTRACT (284) 33 41
BINARY_MULTIPLY (285) 42
BINARY_DIVISION (286) 43
BINARY_MOD (287) 44
O_LEF (288) 23 35 58 59 60 65 66 67 68
O_RIT (289) 23 35 58 59 60 65 66 67 68
O_NOT (290)
O_LEQ (291)
O_GEQ (292)
O_LES (293)
O_GRE (294)
O_EQL (295)
O_NEQ (296)
R_AND (297) 51
R_OR (298) 52
R_EQUALS (299) 49
R_NOT_EQUALS (300) 50
R_GREATER_THAN (301) 46
R_GREATER_THAN_EQUAL (302) 48
R_LESS_THAN (303) 45
R_LESS_THAN_EQUAL (304) 47
UNARY_NOT (305) 34
KEY_RETURN (306) 63


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
PROGRAM (53)
    on left: 1, on right: 0
GLOBAL_DECL (54)
    on left: 2 3 4 5 6, on right: 1 5 6
T_NEWLINES (55)
    on left: 7 8, on right: 8 10 12
T_ELINES (56)
    on left: 9 10 11 12 13, on right: 1 3 4 5 6 12 13 24 26 27
O_SEMICOLONS (57)
    on left: 14 15, on right: 11 13 15 16 28
FIELD_DECLS (58)
    on left: 16, on right: 3 5
IDENTIFIER_LIST (59)
    on left: 17 18 19 20 21 22, on right: 16 21 22 28
METHOD_DECLS (60)
    on left: 23, on right: 4 6
BLOCK (61)
    on left: 24, on right: 23 58 59 60 61 62 64 65 66
EXECUTABLES (62)
    on left: 25 26 27, on right: 24 26 27
VAR_DECL (63)
    on left: 28, on right: 26
EXPRESSION (64)
    on left: 29 30 31 32 33 34 35, on right: 18 19 32 33 34 35 56 58
    59 60 61 63 65 66 70 72 79
BINARY_OP (65)
    on left: 36 37 38 39, on right: 32
ARITHMETIC_OP (66)
    on left: 40 41 42 43 44, on right: 36
RELATIONAL_OP (67)
    on left: 45 46 47 48, on right: 37
EQ_OP (68)
    on left: 49 50, on right: 38
CONDITIONAL_OP (69)
    on left: 51 52, on right: 39
LITERAL (70)
    on left: 53 54 55, on right: 31
STATEMENT (71)
    on left: 56 57 58 59 60 61 62 63, on right: 27
ELSE_BLOCK (72)
    on left: 64 65 66, on right: 60 66
METHOD_CALL (73)
    on left: 67 68, on right: 30 57
PARAM_LIST (74)
    on left: 69 70 71 72 73, on right: 67 68 72 73
METHOD_NAME (75)
    on left: 74, on right: 67
ASSIGNMENT_OP (76)
    on left: 75 76 77, on right: 18 19 56
LOCATION (77)
    on left: 78 79, on right: 29 56
ARG_LIST (78)
    on left: 80 81 82, on right: 23 82


State 0

    0 $accept: . PROGRAM $end

    KEY_CLASS  shift, and go to state 1

    PROGRAM  go to state 2


State 1

    1 PROGRAM: KEY_CLASS . KEY_PROGRAM LEFT_CBRACE T_ELINES GLOBAL_DECL RIGHT_CBRACE T_ELINES

    KEY_PROGRAM  shift, and go to state 3


State 2

    0 $accept: PROGRAM . $end

    $end  shift, and go to state 4


State 3

    1 PROGRAM: KEY_CLASS KEY_PROGRAM . LEFT_CBRACE T_ELINES GLOBAL_DECL RIGHT_CBRACE T_ELINES

    LEFT_CBRACE  shift, and go to state 5


State 4

    0 $accept: PROGRAM $end .

    $default  accept


State 5

    1 PROGRAM: KEY_CLASS KEY_PROGRAM LEFT_CBRACE . T_ELINES GLOBAL_DECL RIGHT_CBRACE T_ELINES

    T_NEWLINE    shift, and go to state 6
    O_SEMICOLON  shift, and go to state 7

    T_NEWLINE    [reduce using rule 9 (T_ELINES)]
    O_SEMICOLON  [reduce using rule 9 (T_ELINES)]
    $default     reduce using rule 9 (T_ELINES)

    T_NEWLINES    go to state 8
    T_ELINES      go to state 9
    O_SEMICOLONS  go to state 10


State 6

    7 T_NEWLINES: T_NEWLINE .

    $default  reduce using rule 7 (T_NEWLINES)


State 7

   14 O_SEMICOLONS: O_SEMICOLON .

    $default  reduce using rule 14 (O_SEMICOLONS)


State 8

    8 T_NEWLINES: T_NEWLINES . T_NEWLINE
   10 T_ELINES: T_NEWLINES .

    T_NEWLINE  shift, and go to state 11

    T_NEWLINE  [reduce using rule 10 (T_ELINES)]
    $default   reduce using rule 10 (T_ELINES)


State 9

    1 PROGRAM: KEY_CLASS KEY_PROGRAM LEFT_CBRACE T_ELINES . GLOBAL_DECL RIGHT_CBRACE T_ELINES
   12 T_ELINES: T_ELINES . T_NEWLINES
   13         | T_ELINES . O_SEMICOLONS

    T_NEWLINE    shift, and go to state 6
    KEY_TYPE     shift, and go to state 12
    O_SEMICOLON  shift, and go to state 7

    KEY_TYPE  [reduce using rule 2 (GLOBAL_DECL)]
    $default  reduce using rule 2 (GLOBAL_DECL)

    GLOBAL_DECL   go to state 13
    T_NEWLINES    go to state 14
    O_SEMICOLONS  go to state 15
    FIELD_DECLS   go to state 16
    METHOD_DECLS  go to state 17


State 10

   11 T_ELINES: O_SEMICOLONS .
   15 O_SEMICOLONS: O_SEMICOLONS . O_SEMICOLON

    O_SEMICOLON  shift, and go to state 18

    O_SEMICOLON  [reduce using rule 11 (T_ELINES)]
    $default     reduce using rule 11 (T_ELINES)


State 11

    8 T_NEWLINES: T_NEWLINES T_NEWLINE .

    $default  reduce using rule 8 (T_NEWLINES)


State 12

   16 FIELD_DECLS: KEY_TYPE . IDENTIFIER_LIST O_SEMICOLONS
   23 METHOD_DECLS: KEY_TYPE . IDENTIFIER O_LEF ARG_LIST O_RIT BLOCK

    IDENTIFIER  shift, and go to state 19

    IDENTIFIER_LIST  go to state 20


State 13

    1 PROGRAM: KEY_CLASS KEY_PROGRAM LEFT_CBRACE T_ELINES GLOBAL_DECL . RIGHT_CBRACE T_ELINES
    5 GLOBAL_DECL: GLOBAL_DECL . FIELD_DECLS T_ELINES
    6            | GLOBAL_DECL . METHOD_DECLS T_ELINES

    KEY_TYPE      shift, and go to state 12
    RIGHT_CBRACE  shift, and go to state 21

    FIELD_DECLS   go to state 22
    METHOD_DECLS  go to state 23


State 14

    8 T_NEWLINES: T_NEWLINES . T_NEWLINE
   12 T_ELINES: T_ELINES T_NEWLINES .

    T_NEWLINE  shift, and go to state 11

    T_NEWLINE  [reduce using rule 12 (T_ELINES)]
    $default   reduce using rule 12 (T_ELINES)


State 15

   13 T_ELINES: T_ELINES O_SEMICOLONS .
   15 O_SEMICOLONS: O_SEMICOLONS . O_SEMICOLON

    O_SEMICOLON  shift, and go to state 18

    O_SEMICOLON  [reduce using rule 13 (T_ELINES)]
    $default     reduce using rule 13 (T_ELINES)


State 16

    3 GLOBAL_DECL: FIELD_DECLS . T_ELINES

    T_NEWLINE    shift, and go to state 6
    O_SEMICOLON  shift, and go to state 7

    T_NEWLINE    [reduce using rule 9 (T_ELINES)]
    O_SEMICOLON  [reduce using rule 9 (T_ELINES)]
    $default     reduce using rule 9 (T_ELINES)

    T_NEWLINES    go to state 8
    T_ELINES      go to state 24
    O_SEMICOLONS  go to state 10


State 17

    4 GLOBAL_DECL: METHOD_DECLS . T_ELINES

    T_NEWLINE    shift, and go to state 6
    O_SEMICOLON  shift, and go to state 7

    T_NEWLINE    [reduce using rule 9 (T_ELINES)]
    O_SEMICOLON  [reduce using rule 9 (T_ELINES)]
    $default     reduce using rule 9 (T_ELINES)

    T_NEWLINES    go to state 8
    T_ELINES      go to state 25
    O_SEMICOLONS  go to state 10


State 18

   15 O_SEMICOLONS: O_SEMICOLONS O_SEMICOLON .

    $default  reduce using rule 15 (O_SEMICOLONS)


State 19

   17 IDENTIFIER_LIST: IDENTIFIER .
   18                | IDENTIFIER . ASSIGNMENT_OP EXPRESSION
   19                | IDENTIFIER . LEFT_SBRACE INT_LITERAL RIGHT_SBRACE ASSIGNMENT_OP EXPRESSION
   20                | IDENTIFIER . LEFT_SBRACE INT_LITERAL RIGHT_SBRACE
   23 METHOD_DECLS: KEY_TYPE IDENTIFIER . O_LEF ARG_LIST O_RIT BLOCK

    EQUAL_OP      shift, and go to state 26
    ADD_EQUAL_OP  shift, and go to state 27
    SUB_EQUAL_OP  shift, and go to state 28
    LEFT_SBRACE   shift, and go to state 29
    O_LEF         shift, and go to state 30

    $default  reduce using rule 17 (IDENTIFIER_LIST)

    ASSIGNMENT_OP  go to state 31


State 20

   16 FIELD_DECLS: KEY_TYPE IDENTIFIER_LIST . O_SEMICOLONS
   21 IDENTIFIER_LIST: IDENTIFIER_LIST . O_COMMA IDENTIFIER
   22                | IDENTIFIER_LIST . O_COMMA IDENTIFIER LEFT_SBRACE INT_LITERAL RIGHT_SBRACE

    O_COMMA      shift, and go to state 32
    O_SEMICOLON  shift, and go to state 7

    O_SEMICOLONS  go to state 33


State 21

    1 PROGRAM: KEY_CLASS KEY_PROGRAM LEFT_CBRACE T_ELINES GLOBAL_DECL RIGHT_CBRACE . T_ELINES

    T_NEWLINE    shift, and go to state 6
    O_SEMICOLON  shift, and go to state 7

    T_NEWLINE    [reduce using rule 9 (T_ELINES)]
    O_SEMICOLON  [reduce using rule 9 (T_ELINES)]
    $default     reduce using rule 9 (T_ELINES)

    T_NEWLINES    go to state 8
    T_ELINES      go to state 34
    O_SEMICOLONS  go to state 10


State 22

    5 GLOBAL_DECL: GLOBAL_DECL FIELD_DECLS . T_ELINES

    T_NEWLINE    shift, and go to state 6
    O_SEMICOLON  shift, and go to state 7

    T_NEWLINE    [reduce using rule 9 (T_ELINES)]
    O_SEMICOLON  [reduce using rule 9 (T_ELINES)]
    $default     reduce using rule 9 (T_ELINES)

    T_NEWLINES    go to state 8
    T_ELINES      go to state 35
    O_SEMICOLONS  go to state 10


State 23

    6 GLOBAL_DECL: GLOBAL_DECL METHOD_DECLS . T_ELINES

    T_NEWLINE    shift, and go to state 6
    O_SEMICOLON  shift, and go to state 7

    T_NEWLINE    [reduce using rule 9 (T_ELINES)]
    O_SEMICOLON  [reduce using rule 9 (T_ELINES)]
    $default     reduce using rule 9 (T_ELINES)

    T_NEWLINES    go to state 8
    T_ELINES      go to state 36
    O_SEMICOLONS  go to state 10


State 24

    3 GLOBAL_DECL: FIELD_DECLS T_ELINES .
   12 T_ELINES: T_ELINES . T_NEWLINES
   13         | T_ELINES . O_SEMICOLONS

    T_NEWLINE    shift, and go to state 6
    O_SEMICOLON  shift, and go to state 7

    $default  reduce using rule 3 (GLOBAL_DECL)

    T_NEWLINES    go to state 14
    O_SEMICOLONS  go to state 15


State 25

    4 GLOBAL_DECL: METHOD_DECLS T_ELINES .
   12 T_ELINES: T_ELINES . T_NEWLINES
   13         | T_ELINES . O_SEMICOLONS

    T_NEWLINE    shift, and go to state 6
    O_SEMICOLON  shift, and go to state 7

    $default  reduce using rule 4 (GLOBAL_DECL)

    T_NEWLINES    go to state 14
    O_SEMICOLONS  go to state 15


State 26

   75 ASSIGNMENT_OP: EQUAL_OP .

    $default  reduce using rule 75 (ASSIGNMENT_OP)


State 27

   76 ASSIGNMENT_OP: ADD_EQUAL_OP .

    $default  reduce using rule 76 (ASSIGNMENT_OP)


State 28

   77 ASSIGNMENT_OP: SUB_EQUAL_OP .

    $default  reduce using rule 77 (ASSIGNMENT_OP)


State 29

   19 IDENTIFIER_LIST: IDENTIFIER LEFT_SBRACE . INT_LITERAL RIGHT_SBRACE ASSIGNMENT_OP EXPRESSION
   20                | IDENTIFIER LEFT_SBRACE . INT_LITERAL RIGHT_SBRACE

    INT_LITERAL  shift, and go to state 37


State 30

   23 METHOD_DECLS: KEY_TYPE IDENTIFIER O_LEF . ARG_LIST O_RIT BLOCK

    KEY_TYPE  shift, and go to state 38

    $default  reduce using rule 80 (ARG_LIST)

    ARG_LIST  go to state 39


State 31

   18 IDENTIFIER_LIST: IDENTIFIER ASSIGNMENT_OP . EXPRESSION

    IDENTIFIER       shift, and go to state 40
    KEY_CALLOUT      shift, and go to state 41
    INT_LITERAL      shift, and go to state 42
    BOOL_LITERAL     shift, and go to state 43
    CHAR_LITERAL     shift, and go to state 44
    BINARY_SUBTRACT  shift, and go to state 45
    O_LEF            shift, and go to state 46
    UNARY_NOT        shift, and go to state 47

    EXPRESSION   go to state 48
    LITERAL      go to state 49
    METHOD_CALL  go to state 50
    METHOD_NAME  go to state 51
    LOCATION     go to state 52


State 32

   21 IDENTIFIER_LIST: IDENTIFIER_LIST O_COMMA . IDENTIFIER
   22                | IDENTIFIER_LIST O_COMMA . IDENTIFIER LEFT_SBRACE INT_LITERAL RIGHT_SBRACE

    IDENTIFIER  shift, and go to state 53


State 33

   15 O_SEMICOLONS: O_SEMICOLONS . O_SEMICOLON
   16 FIELD_DECLS: KEY_TYPE IDENTIFIER_LIST O_SEMICOLONS .

    O_SEMICOLON  shift, and go to state 18

    O_SEMICOLON  [reduce using rule 16 (FIELD_DECLS)]
    $default     reduce using rule 16 (FIELD_DECLS)


State 34

    1 PROGRAM: KEY_CLASS KEY_PROGRAM LEFT_CBRACE T_ELINES GLOBAL_DECL RIGHT_CBRACE T_ELINES .
   12 T_ELINES: T_ELINES . T_NEWLINES
   13         | T_ELINES . O_SEMICOLONS

    T_NEWLINE    shift, and go to state 6
    O_SEMICOLON  shift, and go to state 7

    $default  reduce using rule 1 (PROGRAM)

    T_NEWLINES    go to state 14
    O_SEMICOLONS  go to state 15


State 35

    5 GLOBAL_DECL: GLOBAL_DECL FIELD_DECLS T_ELINES .
   12 T_ELINES: T_ELINES . T_NEWLINES
   13         | T_ELINES . O_SEMICOLONS

    T_NEWLINE    shift, and go to state 6
    O_SEMICOLON  shift, and go to state 7

    $default  reduce using rule 5 (GLOBAL_DECL)

    T_NEWLINES    go to state 14
    O_SEMICOLONS  go to state 15


State 36

    6 GLOBAL_DECL: GLOBAL_DECL METHOD_DECLS T_ELINES .
   12 T_ELINES: T_ELINES . T_NEWLINES
   13         | T_ELINES . O_SEMICOLONS

    T_NEWLINE    shift, and go to state 6
    O_SEMICOLON  shift, and go to state 7

    $default  reduce using rule 6 (GLOBAL_DECL)

    T_NEWLINES    go to state 14
    O_SEMICOLONS  go to state 15


State 37

   19 IDENTIFIER_LIST: IDENTIFIER LEFT_SBRACE INT_LITERAL . RIGHT_SBRACE ASSIGNMENT_OP EXPRESSION
   20                | IDENTIFIER LEFT_SBRACE INT_LITERAL . RIGHT_SBRACE

    RIGHT_SBRACE  shift, and go to state 54


State 38

   81 ARG_LIST: KEY_TYPE . IDENTIFIER

    IDENTIFIER  shift, and go to state 55


State 39

   23 METHOD_DECLS: KEY_TYPE IDENTIFIER O_LEF ARG_LIST . O_RIT BLOCK
   82 ARG_LIST: ARG_LIST . O_COMMA KEY_TYPE IDENTIFIER

    O_COMMA  shift, and go to state 56
    O_RIT    shift, and go to state 57


State 40

   74 METHOD_NAME: IDENTIFIER .
   78 LOCATION: IDENTIFIER .
   79         | IDENTIFIER . LEFT_SBRACE EXPRESSION RIGHT_SBRACE

    LEFT_SBRACE  shift, and go to state 58

    O_LEF     reduce using rule 74 (METHOD_NAME)
    $default  reduce using rule 78 (LOCATION)


State 41

   68 METHOD_CALL: KEY_CALLOUT . O_LEF STRING O_COMMA PARAM_LIST O_RIT

    O_LEF  shift, and go to state 59


State 42

   53 LITERAL: INT_LITERAL .

    $default  reduce using rule 53 (LITERAL)


State 43

   54 LITERAL: BOOL_LITERAL .

    $default  reduce using rule 54 (LITERAL)


State 44

   55 LITERAL: CHAR_LITERAL .

    $default  reduce using rule 55 (LITERAL)


State 45

   33 EXPRESSION: BINARY_SUBTRACT . EXPRESSION

    IDENTIFIER       shift, and go to state 40
    KEY_CALLOUT      shift, and go to state 41
    INT_LITERAL      shift, and go to state 42
    BOOL_LITERAL     shift, and go to state 43
    CHAR_LITERAL     shift, and go to state 44
    BINARY_SUBTRACT  shift, and go to state 45
    O_LEF            shift, and go to state 46
    UNARY_NOT        shift, and go to state 47

    EXPRESSION   go to state 60
    LITERAL      go to state 49
    METHOD_CALL  go to state 50
    METHOD_NAME  go to state 51
    LOCATION     go to state 52


State 46

   35 EXPRESSION: O_LEF . EXPRESSION O_RIT

    IDENTIFIER       shift, and go to state 40
    KEY_CALLOUT      shift, and go to state 41
    INT_LITERAL      shift, and go to state 42
    BOOL_LITERAL     shift, and go to state 43
    CHAR_LITERAL     shift, and go to state 44
    BINARY_SUBTRACT  shift, and go to state 45
    O_LEF            shift, and go to state 46
    UNARY_NOT        shift, and go to state 47

    EXPRESSION   go to state 61
    LITERAL      go to state 49
    METHOD_CALL  go to state 50
    METHOD_NAME  go to state 51
    LOCATION     go to state 52


State 47

   34 EXPRESSION: UNARY_NOT . EXPRESSION

    IDENTIFIER       shift, and go to state 40
    KEY_CALLOUT      shift, and go to state 41
    INT_LITERAL      shift, and go to state 42
    BOOL_LITERAL     shift, and go to state 43
    CHAR_LITERAL     shift, and go to state 44
    BINARY_SUBTRACT  shift, and go to state 45
    O_LEF            shift, and go to state 46
    UNARY_NOT        shift, and go to state 47

    EXPRESSION   go to state 62
    LITERAL      go to state 49
    METHOD_CALL  go to state 50
    METHOD_NAME  go to state 51
    LOCATION     go to state 52


State 48

   18 IDENTIFIER_LIST: IDENTIFIER ASSIGNMENT_OP EXPRESSION .
   32 EXPRESSION: EXPRESSION . BINARY_OP EXPRESSION

    BINARY_ADD            shift, and go to state 63
    BINARY_SUBTRACT       shift, and go to state 64
    BINARY_MULTIPLY       shift, and go to state 65
    BINARY_DIVISION       shift, and go to state 66
    BINARY_MOD            shift, and go to state 67
    R_AND                 shift, and go to state 68
    R_OR                  shift, and go to state 69
    R_EQUALS              shift, and go to state 70
    R_NOT_EQUALS          shift, and go to state 71
    R_GREATER_THAN        shift, and go to state 72
    R_GREATER_THAN_EQUAL  shift, and go to state 73
    R_LESS_THAN           shift, and go to state 74
    R_LESS_THAN_EQUAL     shift, and go to state 75

    $default  reduce using rule 18 (IDENTIFIER_LIST)

    BINARY_OP       go to state 76
    ARITHMETIC_OP   go to state 77
    RELATIONAL_OP   go to state 78
    EQ_OP           go to state 79
    CONDITIONAL_OP  go to state 80


State 49

   31 EXPRESSION: LITERAL .

    $default  reduce using rule 31 (EXPRESSION)


State 50

   30 EXPRESSION: METHOD_CALL .

    $default  reduce using rule 30 (EXPRESSION)


State 51

   67 METHOD_CALL: METHOD_NAME . O_LEF PARAM_LIST O_RIT

    O_LEF  shift, and go to state 81


State 52

   29 EXPRESSION: LOCATION .

    $default  reduce using rule 29 (EXPRESSION)


State 53

   21 IDENTIFIER_LIST: IDENTIFIER_LIST O_COMMA IDENTIFIER .
   22                | IDENTIFIER_LIST O_COMMA IDENTIFIER . LEFT_SBRACE INT_LITERAL RIGHT_SBRACE

    LEFT_SBRACE  shift, and go to state 82

    $default  reduce using rule 21 (IDENTIFIER_LIST)


State 54

   19 IDENTIFIER_LIST: IDENTIFIER LEFT_SBRACE INT_LITERAL RIGHT_SBRACE . ASSIGNMENT_OP EXPRESSION
   20                | IDENTIFIER LEFT_SBRACE INT_LITERAL RIGHT_SBRACE .

    EQUAL_OP      shift, and go to state 26
    ADD_EQUAL_OP  shift, and go to state 27
    SUB_EQUAL_OP  shift, and go to state 28

    $default  reduce using rule 20 (IDENTIFIER_LIST)

    ASSIGNMENT_OP  go to state 83


State 55

   81 ARG_LIST: KEY_TYPE IDENTIFIER .

    $default  reduce using rule 81 (ARG_LIST)


State 56

   82 ARG_LIST: ARG_LIST O_COMMA . KEY_TYPE IDENTIFIER

    KEY_TYPE  shift, and go to state 84


State 57

   23 METHOD_DECLS: KEY_TYPE IDENTIFIER O_LEF ARG_LIST O_RIT . BLOCK

    T_NEWLINE    shift, and go to state 6
    O_SEMICOLON  shift, and go to state 7

    T_NEWLINE    [reduce using rule 9 (T_ELINES)]
    O_SEMICOLON  [reduce using rule 9 (T_ELINES)]
    $default     reduce using rule 9 (T_ELINES)

    T_NEWLINES    go to state 8
    T_ELINES      go to state 85
    O_SEMICOLONS  go to state 10
    BLOCK         go to state 86


State 58

   79 LOCATION: IDENTIFIER LEFT_SBRACE . EXPRESSION RIGHT_SBRACE

    IDENTIFIER       shift, and go to state 40
    KEY_CALLOUT      shift, and go to state 41
    INT_LITERAL      shift, and go to state 42
    BOOL_LITERAL     shift, and go to state 43
    CHAR_LITERAL     shift, and go to state 44
    BINARY_SUBTRACT  shift, and go to state 45
    O_LEF            shift, and go to state 46
    UNARY_NOT        shift, and go to state 47

    EXPRESSION   go to state 87
    LITERAL      go to state 49
    METHOD_CALL  go to state 50
    METHOD_NAME  go to state 51
    LOCATION     go to state 52


State 59

   68 METHOD_CALL: KEY_CALLOUT O_LEF . STRING O_COMMA PARAM_LIST O_RIT

    STRING  shift, and go to state 88


State 60

   32 EXPRESSION: EXPRESSION . BINARY_OP EXPRESSION
   33           | BINARY_SUBTRACT EXPRESSION .

    BINARY_ADD            shift, and go to state 63
    BINARY_SUBTRACT       shift, and go to state 64
    BINARY_MULTIPLY       shift, and go to state 65
    BINARY_DIVISION       shift, and go to state 66
    BINARY_MOD            shift, and go to state 67
    R_AND                 shift, and go to state 68
    R_OR                  shift, and go to state 69
    R_EQUALS              shift, and go to state 70
    R_NOT_EQUALS          shift, and go to state 71
    R_GREATER_THAN        shift, and go to state 72
    R_GREATER_THAN_EQUAL  shift, and go to state 73
    R_LESS_THAN           shift, and go to state 74
    R_LESS_THAN_EQUAL     shift, and go to state 75

    BINARY_ADD            [reduce using rule 33 (EXPRESSION)]
    BINARY_SUBTRACT       [reduce using rule 33 (EXPRESSION)]
    BINARY_MULTIPLY       [reduce using rule 33 (EXPRESSION)]
    BINARY_DIVISION       [reduce using rule 33 (EXPRESSION)]
    BINARY_MOD            [reduce using rule 33 (EXPRESSION)]
    R_AND                 [reduce using rule 33 (EXPRESSION)]
    R_OR                  [reduce using rule 33 (EXPRESSION)]
    R_EQUALS              [reduce using rule 33 (EXPRESSION)]
    R_NOT_EQUALS          [reduce using rule 33 (EXPRESSION)]
    R_GREATER_THAN        [reduce using rule 33 (EXPRESSION)]
    R_GREATER_THAN_EQUAL  [reduce using rule 33 (EXPRESSION)]
    R_LESS_THAN           [reduce using rule 33 (EXPRESSION)]
    R_LESS_THAN_EQUAL     [reduce using rule 33 (EXPRESSION)]
    $default              reduce using rule 33 (EXPRESSION)

    BINARY_OP       go to state 76
    ARITHMETIC_OP   go to state 77
    RELATIONAL_OP   go to state 78
    EQ_OP           go to state 79
    CONDITIONAL_OP  go to state 80


State 61

   32 EXPRESSION: EXPRESSION . BINARY_OP EXPRESSION
   35           | O_LEF EXPRESSION . O_RIT

    BINARY_ADD            shift, and go to state 63
    BINARY_SUBTRACT       shift, and go to state 64
    BINARY_MULTIPLY       shift, and go to state 65
    BINARY_DIVISION       shift, and go to state 66
    BINARY_MOD            shift, and go to state 67
    O_RIT                 shift, and go to state 89
    R_AND                 shift, and go to state 68
    R_OR                  shift, and go to state 69
    R_EQUALS              shift, and go to state 70
    R_NOT_EQUALS          shift, and go to state 71
    R_GREATER_THAN        shift, and go to state 72
    R_GREATER_THAN_EQUAL  shift, and go to state 73
    R_LESS_THAN           shift, and go to state 74
    R_LESS_THAN_EQUAL     shift, and go to state 75

    BINARY_OP       go to state 76
    ARITHMETIC_OP   go to state 77
    RELATIONAL_OP   go to state 78
    EQ_OP           go to state 79
    CONDITIONAL_OP  go to state 80


State 62

   32 EXPRESSION: EXPRESSION . BINARY_OP EXPRESSION
   34           | UNARY_NOT EXPRESSION .
